spring and mybatis docs

--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
             <systemPath>${basedir}/lib/hadoop-client-2.7.4.jar</systemPath>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.4</version>
+        </dependency>
+
 
     </dependencies>
 
